--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* google font */
-@import url("http://fonts.googleapis.com/css?family=Quicksand:wght@200;400;800&family=VT323&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Quicksand:wght@200;400;800&family=VT323&display=swap");
 
 /* custom scrollbar */
 ::-webkit-scrollbar {
